working base template - toggle nav working

--- a/cdi/templates/home/clubs_test.html
+++ b/cdi/templates/home/clubs_test.html
@@ -1,6 +1,6 @@
-{% extends "base_test.html" %}
+{% extends "base.html" %}
 
-{% block extras %}
+{% block extrahead %}
 <link rel="stylesheet" href="{{ STATIC_URL }}style/content.css">
 {% endblock %}
 
