--- a/cdi/assets/css/bootstrap-responsive.css
+++ b/cdi/assets/css/bootstrap-responsive.css
@@ -862,6 +862,10 @@
   .nav-collapse {
     -webkit-transform: translate3d(0, 0, 0);
   }
+  .nav-collapse-footer {
+    -webkit-transform: translate3d(0, 0, 0);
+  }
+
   .page-header h1 small {
     display: block;
     line-height: 20px;
@@ -1023,6 +1027,107 @@
     height: 0;
     overflow: hidden;
   }
+  
+/*NAVBAR FOOTER krambir */
+  .nav-collapse-footer {
+    clear: both;
+  }
+  .nav-collapse-footer .nav {
+    float: none;
+    margin: 0 0 10px;
+  }
+  .nav-collapse-footer .nav > li {
+    float: none;
+  }
+  .nav-collapse-footer .nav > li > a {
+    margin-bottom: 2px;
+  }
+  .nav-collapse-footer .nav > .divider-vertical {
+    display: none;
+  }
+  .nav-collapse-footer .nav .nav-header {
+    color: #555555;
+    text-shadow: none;
+  }
+  .nav-collapse-footer .nav > li > a,
+  .nav-collapse-footer .dropdown-menu a {
+    padding: 9px 15px;
+    font-weight: bold;
+    color: #555555;
+    -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+            border-radius: 3px;
+  }
+  .nav-collapse-footer .btn {
+    padding: 4px 10px 4px;
+    font-weight: normal;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+  }
+  .nav-collapse-footer .dropdown-menu li + li a {
+    margin-bottom: 2px;
+  }
+  .nav-collapse-footer .nav > li > a:hover,
+  .nav-collapse-footer .dropdown-menu a:hover {
+    background-color: #f2f2f2;
+  }
+  .navbar-inverse .nav-collapse-footer .nav > li > a:hover,
+  .navbar-inverse .nav-collapse-footer .dropdown-menu a:hover {
+    background-color: #111111;
+  }
+  .nav-collapse-footer.in .btn-group {
+    padding: 0;
+    margin-top: 5px;
+  }
+  .nav-collapse-footer .dropdown-menu {
+    position: static;
+    top: auto;
+    left: auto;
+    display: block;
+    float: none;
+    max-width: none;
+    padding: 0;
+    margin: 0 15px;
+    background-color: transparent;
+    border: none;
+    -webkit-border-radius: 0;
+       -moz-border-radius: 0;
+            border-radius: 0;
+    -webkit-box-shadow: none;
+       -moz-box-shadow: none;
+            box-shadow: none;
+  }
+  .nav-collapse-footer .dropdown-menu:before,
+  .nav-collapse-footer .dropdown-menu:after {
+    display: none;
+  }
+  .nav-collapse-footer .dropdown-menu .divider {
+    display: none;
+  }
+  .nav-collapse-footer .navbar-form,
+  .nav-collapse-footer .navbar-search {
+    float: none;
+    padding: 10px 15px;
+    margin: 10px 0;
+    border-top: 1px solid #f2f2f2;
+    border-bottom: 1px solid #f2f2f2;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
+       -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
+  }
+  .navbar .nav-collapse-footer .nav.pull-right {
+    float: none;
+    margin-left: 0;
+  }
+  .nav-collapse-footer,
+  .nav-collapse-footer.collapse {
+    height: 0;
+    overflow: hidden;
+  }
+  
+/* NAVBAR FOOTER end */
+  
   .navbar .btn-navbar {
     display: block;
   }
@@ -1034,6 +1139,10 @@
 
 @media (min-width: 980px) {
   .nav-collapse.collapse {
+    height: auto !important;
+    overflow: visible !important;
+  }
+    .nav-collapse-footer.collapse {
     height: auto !important;
     overflow: visible !important;
   }
