--- a/cdi/assets/css/bootstrap.css
+++ b/cdi/assets/css/bootstrap.css
@@ -4050,6 +4050,10 @@ input[type="submit"].btn.btn-mini {
   height: auto;
 }
 
+.nav-collapse-footer.collapse {
+  height: auto;
+}
+
 .navbar .brand {
   display: block;
   float: left;
@@ -5456,7 +5460,7 @@ a.badge:hover {
 
 .carousel {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 2px;
   line-height: 1;
 }
 
