--- a/cdi/templates/base.html
+++ b/cdi/templates/base.html
@@ -2,21 +2,35 @@
     <head>
         <title>{% block title %}{% endblock %}</title>
 
-
-        <style>
+<style>
             body {
-                padding-top:60px;
+                padding-top:40px;
             }
-        </style>
+            header {
+                background: url({{ STATIC_URL }}img/cdiheader.png);
+                opacity:0.8;
+            }
+            header small {
+                color: #000 !important;
+            }
+</style>
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap-responsive.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/cdi.css">
 
         {% block extrahead %} {% endblock %}
     </head>
-    <body>
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="navbar-inner">
-            <a href="#" class="brand">CollegeDiveIn</a>
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">CollegeDiveIn</a>
+          <div class="nav-collapse collapse">
             <ul class="nav pull-right">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Events</a></li>
@@ -24,95 +38,32 @@
                 <li><a href="#">Colleges</a></li>
                 <li><a href="#">Academics</a></li>
             </ul>
-            </div>
+          </div><!--/.nav-collapse -->
         </div>
-
+      </div>
+    </div>
+    {% block header-content %}    
         <header class="jumbotron subhead">
             <div class="container">
-                <h1>Welcome to CollegeDiveIn</h1>
-                <p class="lead">Connect with us on our <a href="http://facebook.com/collegedivein">facebook page</a>.</p>
+                <h1>{% block page-heading %}{% endblock page-heading %}</h1>
+                <p class="lead">{% block page-heading-desc %}{% endblock page-heading-desc %}</p>
             </div>
         </header>
+    {% endblock header-content %}
 
-        <div class="container-fluid">
-            <div class="row-fluid">
-                <div class="span3">
-                    <div class="well sidebar-nav">
-                        <ul class="nav nav-list">
-                            <li class="active"><a href="#">Popular Clubs</a></li>
-                            <li><a href="#">All</a></li>
-                            <li class="nav-header">Get Clubs by:</li>
-                        </ul>
+    <div class="container">
+        {% block container-content %}
+        {% endblock %}
+    </div>
 
-                            <div id="sidebar-menu" class="accordion">
-                                <div class="accordian-group">
-                                    <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#sidebar-menu" href="#region">Region<i class="icon-arrow-down pull-right"></i></a>
-                                    </div>
-                                    <div id="region" class="accordion-body collapse">
-                                        <div class="accordion-inner">
-                                            <ul class="nav nav-list">
-                                                <li><a href="#">North</a></li>
-                                                <li><a href="#">East</a></li>
-                                                <li><a href="#">West</a></li>
-                                                <li><a href="#">Central</a></li>
-                                                <li><a href="#">South</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordian-group">
-                                    <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#sidebar-menu" href="#type">Type<i class="icon-arrow-down pull-right"></i></a>
-                                    </div>
-                                    <div id="type" class="accordion-body collapse">
-                                        <div class="accordion-inner">
-                                            <ul class="nav nav-list">
-                                                <li><a href="#">Engg and Tech</a></li>
-                                                <li><a href="#">Applied Sciences</a></li>
-                                                <li><a href="#">Social/NGO</a></li>
-                                                <li><a href="#">Music/Bands</a></li>
-                                                <li><a href="#">Management/Finance</a></li>
-                                                <li><a href="#">Others</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordian-group">
-                                    <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#sidebar-menu" href="#campus">Campus<i class="icon-arrow-down pull-right"></i></a>
-                                    </div>
-                                    <div id="campus" class="accordion-body collapse">
-                                        <div class="accordion-inner">
-                                            <ul class="nav nav-list">
-                                                <li><a href="#">IIT Delhi</a></li>
-                                                <li><a href="#">IIT Bombay</a></li>
-                                                <li><a href="#">IIT Kanpur</a></li>
-                                                <li><a href="#">Amity Univeristy, Haryana</a></li>
-                                                <li><a href="#">Delhi University</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                    </div>
-                    <div class="row-fluid">
-                        <div class="span2"><a href="#" class="btn btn-link btn-small">Blog</a></div>
-                        <div class="span2"><a href="#" class="btn btn-link btn-small">Team</a></div>
-                        <div class="span2"><a href="#" class="btn btn-link btn-small">About</a></div>
-                        <div class="span2"><a href="#" class="btn btn-link btn-small">Contact</a></div>
-                    </div>
-                </div>
-                <div class="span9">
-        {% block content %}{% endblock %}
-                    <div class="hero-unit">
-                        <h1>Club Listing</h1>
-                        <p>Wanna see your club?</p>
-                        <p><a href="#" class="btn btn-primary btn large">Register it</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <footer>
+    {% block footer %}{% endblock %}
+    </footer>
+
         <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
         <script src="{{ STATIC_URL }}js/jquery.js"></script>
         <script src="{{ STATIC_URL }}js/bootstrap-collapse.js"></script>
         <script src="{{ STATIC_URL }}js/bootstrap-transition.js"></script>
+        <script src="{{ STATIC_URL }}js/bootstrap-carousel.js"></script>
     </body>
 </html>
