--- a/cdi/templates/pages.html
+++ b/cdi/templates/pages.html
@@ -1,7 +1,59 @@
 {% extends "base.html" %}
 
-{% block content %}
-<div id="container">
-
+{% block page-heading %}Welcome to CollegeDiveIn <small>spice up your life</small>{% endblock %}
+{% block container-content %}
+<div class="row clearfix" style="margin-top:1px">
+    <div id="myCarousel" class="span8 offset2 carousel slide" data-interval="3000">
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="{{ STATIC_URL }}img/slide1.jpg" alt="">
+                <div class="carousel-caption">
+                    <h4>First Thumbnail label</h4>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{{ STATIC_URL }}img/slide2.jpg" alt="">
+                <div class="carousel-caption">
+                    <h4>Second Thumbnail label</h4>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{{ STATIC_URL }}img/slide3.jpg" alt="">
+                <div class="carousel-caption">
+                    <h4>Third Thumbnail label</h4>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                </div>
+            </div>
+        </div>
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+    </div>
 </div>
+{% endblock %}
+{% block footer %}
+<div class="navbar navbar-inverse fixed-bottom">
+    <div class="navbar-inner">
+        <div class="container-fluid">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse-footer">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <div class="nav-collapse-footer collapse">
+                <ul class="nav">
+                    <li class="divider-vertical"></li>
+                    <li><a href="#">Learn More</a></li>
+                    <li class="divider-vertical"></li>
+                    <li><a href="#">Team</a></li>
+                    <li class="divider-vertical"></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li class="divider-vertical"></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
+</div>
+
 {% endblock %}
