--- a/cdi/templates/home/clubs/clubs_all.html
+++ b/cdi/templates/home/clubs/clubs_all.html
@@ -1,9 +1,9 @@
-{% extends "home/list_base.html" %}
+{% extends "home/clubs_list_base.html" %}
 
 {% block extrahead %}
 {% endblock %}
 
-{% block title %}Clubs | CollegeDiveIn{% endblock %}
+{% block title %}College Clubs - CollegeDiveIn{% endblock %}
 
 {% block page-heading %}College Clubs in India{% endblock %}
 
