events template done

--- a/cdi/templates/team.html
+++ b/cdi/templates/team.html
@@ -7,7 +7,7 @@
 
 <div class="row clearfix">
     <div id="about" class="span12" style="margin-top: 20px">
-        <div id="karambir" class="hero-unit">
+        <section id="karambir" class="hero-unit">
             <h1>Karambir Singh Nain</h1>
             <p>lead developer and manager</p>
             <div class="row">
@@ -24,8 +24,8 @@
                     <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
-        </div>
-        <div id="mayank" class="hero-unit">
+        </section>
+        <section id="mayank" class="hero-unit">
             <h1>Mayank Jain</h1>
             <p>manager and moderator</p>
             <div class="row">
@@ -42,8 +42,8 @@
                     <img src="{{ STATIC_URL }}img/slide2.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
-        </div>
-        <div id="aksh" class="hero-unit">
+        </section>
+        <section id="aksh" class="hero-unit">
             <h1>Aksh Vashishth</h1>
             <p>lead designer</p>
             <div class="row">
@@ -58,8 +58,8 @@
                     <img src="{{ STATIC_URL }}img/slide3.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
-        </div>
-        <div id="mohit" class="hero-unit">
+        </section>
+        <section id="mohit" class="hero-unit">
             <h1>Mohit Moudgil</h1>
             <p>moderator and promoter</p>
             <div class="row">
@@ -73,7 +73,23 @@
                     <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
-        </div>
+        </section>
+        <section id="aakash" class="hero-unit">
+            <h1>Aakash Malhotra</h1>
+            <p>lead photographer</p>
+            <div class="row">
+                <div class="span4">
+                <p>part time he also does:</p>
+                <ul>
+                    <li>marketing of website</li>
+                    <li>promotion of product</li>
+                </ul>
+                </div>
+                <div class="span6 pull-right">
+                    <img src="{{ STATIC_URL }}img/slide2.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                </div>
+            </div>
+        </section>
 
     </div>
 </div>
