--- a/cdi/templates/home/events_list_base.html
+++ b/cdi/templates/home/events_list_base.html
@@ -7,9 +7,9 @@
                 <div class="span3">
                     <div class="well sidebar-nav">
                         <ul class="nav nav-list">
-                            <li class="{% active request "^/clubs/$" %}"><a href="{{ HOST }}/clubs/">Popular Clubs</a></li>
-                            <li class="{% active request "^/clubs/all/" %}"><a href="{{ HOST }}/clubs/all/">All</a></li>
-                            <li class="nav-header">Get Clubs by:</li>
+                            <li class="{% active request "^/events/coming/$" %}"><a href="{{ HOST }}/events/coming/">Coming Events</a></li>
+                            <li class="{% active request "^/events/popular/$" %}"><a href="{{ HOST }}/events/popular/">Popular events</a></li>
+                            <li class="nav-header">Get Events by:</li>
                         </ul>
 
                             <div id="sidebar-menu" class="accordion">
@@ -19,11 +19,11 @@
                                     <div id="region" class="accordion-body collapse">
                                         <div class="accordion-inner">
                                             <ul class="nav nav-list">
-                                                <li class="{% active request "^/clubs/region/1/$" %}"><a href="{{ HOST }}/clubs/">North</a></li>
-                                                <li class="{% active request "^/clubs/region/2/$" %}"><a href="{{ HOST }}/clubs/">East</a></li>
-                                                <li class="{% active request "^/clubs/region/3/$" %}"><a href="{{ HOST }}/clubs/">West</a></li>
-                                                <li class="{% active request "^/clubs/region/4/$" %}"><a href="{{ HOST }}/clubs/">Central</a></li>
-                                                <li class="{% active request "^/clubs/region/5/$" %}"><a href="{{ HOST }}/clubs/">South</a></li>
+                                                <li class="{% active request "^/events/region/1/$" %}"><a href="{{ HOST }}/events/">North</a></li>
+                                                <li class="{% active request "^/events/region/2/$" %}"><a href="{{ HOST }}/events/">East</a></li>
+                                                <li class="{% active request "^/events/region/3/$" %}"><a href="{{ HOST }}/events/">West</a></li>
+                                                <li class="{% active request "^/events/region/4/$" %}"><a href="{{ HOST }}/events/">Central</a></li>
+                                                <li class="{% active request "^/events/region/5/$" %}"><a href="{{ HOST }}/events/">South</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -34,13 +34,13 @@
                                     <div id="type" class="accordion-body collapse">
                                         <div class="accordion-inner">
                                             <ul class="nav nav-list">
-                                                <li class="{% active request "^/clubs/type/1/$" %}"><a href="{{ HOST }}/clubs/type/1">Engg and Tech</a></li>
-                                                <li class="{% active request "^/clubs/type/2/$" %}"><a href="{{ HOST }}/clubs/type/2">Applied Sciences</a></li>
-                                                <li class="{% active request "^/clubs/type/3/$" %}"><a href="{{ HOST }}/clubs/type/3">Social/NGO</a></li>
-                                                <li class="{% active request "^/clubs/type/4/$" %}"><a href="{{ HOST }}/clubs/type/4">Arts/Drama/Literature</a></li>
-                                                <li class="{% active request "^/clubs/type/5/$" %}"><a href="{{ HOST }}/clubs/type/5">Music/Bands</a></li>
-                                                <li class="{% active request "^/clubs/type/6/$" %}"><a href="{{ HOST }}/clubs/type/6">Management/Finance</a></li>
-                                                <li class="{% active request "^/clubs/type/7/$" %}"><a href="{{ HOST }}/clubs/type/7">Others</a></li>
+                                                <li class="{% active request "^/events/type/1/$" %}"><a href="{{ HOST }}/events/type/1">Engg and Tech</a></li>
+                                                <li class="{% active request "^/events/type/2/$" %}"><a href="{{ HOST }}/events/type/2">Applied Sciences</a></li>
+                                                <li class="{% active request "^/events/type/3/$" %}"><a href="{{ HOST }}/events/type/3">Social/NGO</a></li>
+                                                <li class="{% active request "^/events/type/4/$" %}"><a href="{{ HOST }}/events/type/4">Arts/Drama/Literature</a></li>
+                                                <li class="{% active request "^/events/type/5/$" %}"><a href="{{ HOST }}/events/type/5">Music/Bands</a></li>
+                                                <li class="{% active request "^/events/type/6/$" %}"><a href="{{ HOST }}/events/type/6">Management/Finance</a></li>
+                                                <li class="{% active request "^/events/type/7/$" %}"><a href="{{ HOST }}/events/type/7">Others</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -53,17 +53,17 @@
                                             <ul class="nav nav-list">
 
                                                 {% for college in COLLEGES %}
-                                                <li class="{% active request "^/clubs/campus/{{ college.id }}/$" %}"><a href="{{ HOST }}/clubs/campus/{{ college.id }}/">{{ college.name }}</a></li>
+                                                <li class="{% active request "^/events/campus/{{ college.id }}/$" %}"><a href="{{ HOST }}/events/campus/{{ college.id }}/">{{ college.name }}</a></li>
 
                                                 {% endfor %}
 
 
 <!--
-                                                <li class="{% active request "^/clubs/campus/1/$" %}"><a href="{{ HOST }}/clubs/campus/1/">IIT Delhi</a></li>
-                                                <li class="{% active request "^/clubs/campus/2/$" %}"><a href="{{ HOST }}/clubs/campus/2/">IIT Bombay</a></li>
-                                                <li class="{% active request "^/clubs/campus/3/$" %}"><a href="{{ HOST }}/clubs/campus/3/">ASET, Gurgaon</a></li>
-                                                <li class="{% active request "^/clubs/campus/4/$" %}"><a href="{{ HOST }}/clubs/campus/4/">ABS, Gurgaon</a></li>
-                                                <li class="{% active request "^/clubs/campus/5/$" %}"><a href="{{ HOST }}/clubs/campus/5/">IIT Kanpur</a></li>
+                                                <li class="{% active request "^/events/campus/1/$" %}"><a href="{{ HOST }}/events/campus/1/">IIT Delhi</a></li>
+                                                <li class="{% active request "^/events/campus/2/$" %}"><a href="{{ HOST }}/events/campus/2/">IIT Bombay</a></li>
+                                                <li class="{% active request "^/events/campus/3/$" %}"><a href="{{ HOST }}/events/campus/3/">ASET, Gurgaon</a></li>
+                                                <li class="{% active request "^/events/campus/4/$" %}"><a href="{{ HOST }}/events/campus/4/">ABS, Gurgaon</a></li>
+                                                <li class="{% active request "^/events/campus/5/$" %}"><a href="{{ HOST }}/events/campus/5/">IIT Kanpur</a></li>
                                                 -->
 
                                             </ul>
