--- a/cdi/templates/about.html
+++ b/cdi/templates/about.html
@@ -7,7 +7,7 @@
 
 <div class="row clearfix">
     <div id="about" class="span12" style="margin-top: 20px">
-        <div class="hero-unit">
+        <section class="less-padding hero-unit">
             <h1>know about local events</h1>
             <p>Get information about all the college events in the country. Attend more events of favourite genre and get social.</p>
             <div class="row">
@@ -24,8 +24,8 @@
                     <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
-        </div>
-        <div class="hero-unit">
+        </section>
+        <section class="less-padding hero-unit">
             <h1>connect with popular clubs</h1>
             <p>We have database of all the popular college clubs. Connect with your favourite one and have fun.</p>
             <div class="row">
@@ -42,8 +42,8 @@
                     <img src="{{ STATIC_URL }}img/slide2.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
-        </div>
-        <div class="hero-unit">
+        </section>
+        <section class="less-padding hero-unit">
             <h1>know which college is best</h1>
             <p>Based on students, and other people response calculated algorithmically, get ratings of the best colleges in the country.</p>
             <div class="row">
@@ -59,8 +59,8 @@
                     <img src="{{ STATIC_URL }}img/slide3.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
-        </div>
-        <div class="hero-unit">
+        </section>
+        <section class="less-padding hero-unit">
             <h1>study material</h1>
             <p>Though at very small scale, you can also get some notes for B.Tech courses.</p>
             <div class="row">
@@ -76,7 +76,7 @@
                     <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
-        </div>
+        </section>
 
     </div>
 </div>
