--- a/cdi/templates/home/clubs/clubs_type.html
+++ b/cdi/templates/home/clubs/clubs_type.html
@@ -1,6 +1,6 @@
 {% extends "home/clubs/clubs_all.html" %}
 
-{% block title %}{{ ctype }} Clubs - CollegeDiveIn{% endblock %}
+{% block title %}{{ etype }} Clubs - CollegeDiveIn{% endblock %}
 
 {% block page-heading%}
 {{ ctype }} Clubs
