--- a/cdi/templates/home/events/events_campus.html
+++ b/cdi/templates/home/events/events_campus.html
@@ -3,7 +3,7 @@
 {% block title %}{{ cname }} events - CollegeDiveIn{% endblock %}
 
 {% block page-heading%}
-events of {{ cname }}
+Events of {{ cname }}
 {% endblock %}
 
 
