--- a/cdi/templates/home/events/events_region.html
+++ b/cdi/templates/home/events/events_region.html
@@ -1,9 +1,9 @@
 {% extends "home/events/events_all.html" %}
 
-{% block title %}{{ cregion }} events - CollegeDiveIn{% endblock %}
+{% block title %}{{ cregion }} Events - CollegeDiveIn{% endblock %}
 
 {% block page-heading%}
-{{ cregion }} events
+{{ cregion }} Events
 {% endblock %}
 
 
