--- a/cdi/templates/home/events/events_type.html
+++ b/cdi/templates/home/events/events_type.html
@@ -1,9 +1,9 @@
 {% extends "home/events/events_all.html" %}
 
-{% block title %}{{ etype }} events - CollegeDiveIn{% endblock %}
+{% block title %}{{ etype }} - Events - CollegeDiveIn{% endblock %}
 
 {% block page-heading%}
-{{ etype }} events
+{{ etype }} - Events
 {% endblock %}
 
 
