--- a/cdi/templates/team.html
+++ b/cdi/templates/team.html
@@ -7,7 +7,7 @@
 
 <div class="row clearfix">
     <div id="about" class="span12" style="margin-top: 20px">
-        <section id="karambir" class="hero-unit">
+        <section id="karambir" class="less-padding hero-unit">
             <h1>Karambir Singh Nain</h1>
             <p>lead developer and manager</p>
             <div class="row">
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </section>
-        <section id="mayank" class="hero-unit">
+        <section id="mayank" class="less-padding hero-unit">
             <h1>Mayank Jain</h1>
             <p>manager and moderator</p>
             <div class="row">
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </section>
-        <section id="aksh" class="hero-unit">
+        <section id="aksh" class="less-padding hero-unit">
             <h1>Aksh Vashishth</h1>
             <p>lead designer</p>
             <div class="row">
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </section>
-        <section id="mohit" class="hero-unit">
+        <section id="mohit" class="less-padding hero-unit">
             <h1>Mohit Moudgil</h1>
             <p>moderator and promoter</p>
             <div class="row">
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </section>
-        <section id="aakash" class="hero-unit">
+        <section id="aakash" class="less-padding hero-unit">
             <h1>Aakash Malhotra</h1>
             <p>lead photographer</p>
             <div class="row">
