--- a/cdi/templates/base.html
+++ b/cdi/templates/base.html
@@ -67,5 +67,7 @@
         <script src="{{ STATIC_URL }}js/bootstrap-collapse.js"></script>
         <script src="{{ STATIC_URL }}js/bootstrap-transition.js"></script>
         <script src="{{ STATIC_URL }}js/bootstrap-carousel.js"></script>
+
+        {% block extrajs %}{% endblock %}
     </body>
 </html>
