--- a/cdi/templates/home.html
+++ b/cdi/templates/home.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 
 {% block title %}CollegeDiveIn - spice up your college life{% endblock %}
+
+{% block extrajs %}<script src="{{ STATIC_URL }}js/cdi.js"></script> {% endblock %}
+
 {% block page-heading %}Welcome to CollegeDiveIn <small>spice up your life</small>{% endblock %}
+
 {% block container-content %}
 <div class="row clearfix" style="margin-top:1px">
-    <div id="myCarousel" class="span8 offset2 carousel slide" data-interval="3000">
+    <div id="myCarousel" class="span8 offset2 carousel slide" data-interval="4000">
         <div class="carousel-inner">
             <div class="item active">
                 <img src="{{ STATIC_URL }}img/slide1.jpg" alt="">
