--- a/cdi/templates/home/clubs/club_detail.html
+++ b/cdi/templates/home/clubs/club_detail.html
@@ -5,12 +5,14 @@
 
 {% block title %}{{ club.name }} - CollegeDiveIn{% endblock %}
 
-{% block page-heading %} {{ club.name }} {% endblock %}
+{% block page-heading %} {{ club.name }} <small>({{ club.college }})</small>{% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="span7 hero-unit">
-    <img class="pull-right img-polaroid" height="100" width="150" src="{{ club.thumbnail }}" alt="{{ club.name }} - CollegeDiveIn" />
+        <div class="row">
+            <div class="span5">
+
     <ul id="detail-ul" class="unstyled pull-left lead">
         <li><b>Type:</b> {{ club.club_type }}</li>
         <li><b>College:</b> {{ club.college }}</li>
@@ -19,6 +21,12 @@
         <li><b>Info:</b> {{ club.about }}</li>
         <li><a href="{{club.website }}">Website/Facebook Page</a></li>
     </ul>
+
+            </div>
+            <div class="span2 pull-right">
+                <img class="img-polaroid" height="100" width="150" src="{{ club.thumbnail }}" alt="{{ club.name }} - CollegeDiveIn" />
+            </div>
+        </div>
     </div>
 </div>
 
