--- a/cdi/templates/home/events/events_all.html
+++ b/cdi/templates/home/events/events_all.html
@@ -3,15 +3,15 @@
 {% block extrahead %}
 {% endblock %}
 
-{% block title %}Upcoming College events - CollegeDiveIn{% endblock %}
+{% block title %}Upcoming College Events - CollegeDiveIn{% endblock %}
 
-{% block page-heading %}Upcoming College events in India{% endblock %}
+{% block page-heading %}Upcoming College Events in India{% endblock %}
 
 {% block content %} 
     {% for event in event_list %}
     <br />
     <div class="subhero-unit">
-        <h2>{{ event.name }}</h2><hr />
+        <h2><a href="{{ HOST }}/events/{{ event.id }}/">{{ event.name }}</a></h2><hr />
         <div class="row">
             <div class="span3">
                 <img class="pull-left img-polaroid" height="100" width="150" src="{{ event.thumbnail }}" alt="{{ event.name }}" />
@@ -19,14 +19,13 @@
             <div class="span5">
             <ul class="unstyled">
                 <li>Type: {{ event.event_type }}</li>
-                <li>College: {{ event.college }}</li>
+                <li>College: {{ event.host }}</li>
+                <li>Venue: {{ event.venue }}</li>
                 <li>Dates: {{ event.start_date }} - {{ event.end_date }}</li>
                 <li>Participation/Attend: {{event.participate }}</li>
-                {% ifnotequals event.website "" %}
                 <li><a href="{{event.website }}">Website/Facebook Page</a></li>
-                {% endifnotequals %}
             </ul>
-            <a href="#" class="pull-right btn btn-primary">More...</a>
+            <a href="{{ HOST }}/events/{{ event.id }}/" class="pull-right btn btn-primary">More...</a>
             </div>
         </div>
     </div>
