--- a/cdi/templates/home/events_list_base.html
+++ b/cdi/templates/home/events_list_base.html
@@ -7,8 +7,8 @@
                 <div class="span3">
                     <div class="well sidebar-nav">
                         <ul class="nav nav-list">
-                            <li class="{% active request "^/events/coming/$" %}"><a href="{{ HOST }}/events/coming/">Coming Events</a></li>
-                            <li class="{% active request "^/events/popular/$" %}"><a href="{{ HOST }}/events/popular/">Popular events</a></li>
+                            <li class="{% active request "^/events/coming/" %}"><a href="{{ HOST }}/events/coming/">Coming Events</a></li>
+                            <li class="{% active request "^/events/popular/" %}"><a href="{{ HOST }}/events/popular/">Popular events</a></li>
                             <li class="nav-header">Get Events by:</li>
                         </ul>
 
@@ -34,13 +34,13 @@
                                     <div id="type" class="accordion-body collapse">
                                         <div class="accordion-inner">
                                             <ul class="nav nav-list">
-                                                <li class="{% active request "^/events/type/1/$" %}"><a href="{{ HOST }}/events/type/1">Engg and Tech</a></li>
-                                                <li class="{% active request "^/events/type/2/$" %}"><a href="{{ HOST }}/events/type/2">Applied Sciences</a></li>
-                                                <li class="{% active request "^/events/type/3/$" %}"><a href="{{ HOST }}/events/type/3">Social/NGO</a></li>
-                                                <li class="{% active request "^/events/type/4/$" %}"><a href="{{ HOST }}/events/type/4">Arts/Drama/Literature</a></li>
-                                                <li class="{% active request "^/events/type/5/$" %}"><a href="{{ HOST }}/events/type/5">Music/Bands</a></li>
-                                                <li class="{% active request "^/events/type/6/$" %}"><a href="{{ HOST }}/events/type/6">Management/Finance</a></li>
-                                                <li class="{% active request "^/events/type/7/$" %}"><a href="{{ HOST }}/events/type/7">Others</a></li>
+                                                <li class="{% active request "^/events/type/1/$" %}"><a href="{{ HOST }}/events/type/1">Academics</a></li>
+                                                <li class="{% active request "^/events/type/2/$" %}"><a href="{{ HOST }}/events/type/2">Seminar/Workshop</a></li>
+                                                <li class="{% active request "^/events/type/3/$" %}"><a href="{{ HOST }}/events/type/3">Party</a></a></li>
+                                                <li class="{% active request "^/events/type/4/$" %}"><a href="{{ HOST }}/events/type/4">Festival</a></li>
+                                                <li class="{% active request "^/events/type/5/$" %}"><a href="{{ HOST }}/events/type/5">Conference</a></li>
+                                                <li class="{% active request "^/events/type/6/$" %}"><a href="{{ HOST }}/events/type/6">Competition</a></li>
+                                                <li class="{% active request "^/events/type/7/$" %}"><a href="{{ HOST }}/events/type/7">Other</a></li>
                                             </ul>
                                         </div>
                                     </div>
