colleges working, about changed footer improved

--- a/cdi/templates/about.html
+++ b/cdi/templates/about.html
@@ -15,7 +15,7 @@
                 <p>Get event listing by:</p>
                 <ul>
                     <li>popularity - most popular events</li>
-                    <li>genre - fest, party and many more</li>
+                    <li>genre - fests, party and many more</li>
                     <li>region - north, south, east, west, central</li>
                     <li>campuses</li>
                 </ul>
@@ -71,6 +71,41 @@
                     <li>popular notes</li>
                     <li>campuses</li>
                 </ul>
+                </div>
+                <div class="span6 pull-right">
+                    <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                </div>
+            </div>
+        </section>
+        <section class="less-padding hero-unit">
+            <h1>Run smoothly on every device</h1>
+            <p>CDI is built on top of famous Twitter Bootstrap, so it can manage any modern device efficiently.</p>
+            <div class="row">
+                <div class="span4">
+                <p>works superb on:</p>
+                <ul>
+                    <li>any desktop/laptop with chrome18+/firefox14+/opera12/safari5+/IE10</li>
+                    <li>any tablet with Android2.3+/Ipad</li>
+                    <li>all modern mobile browsers like Android2.3+/Mobile Safari/Opera Mobile12/Firefox/Chrome</li>
+                </ul>
+                <p>Sorry we do not supprt IE6, IE7, IE8, IE9. </p>
+                </div>
+                <div class="span6 pull-right">
+                    <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                </div>
+            </div>
+        </section>
+        <section class="less-padding hero-unit">
+            <h1>Built by the college students</h1>
+            <p>So we know what a typical college student would want.</p>
+            <div class="row">
+                <div class="span4">
+                <p>we are:</p>
+                <ul>
+                    <li>open to ideas/features</li>
+                    <li>open for collaboration</li>
+                </ul>
+                <p>We need college representatives from every college in India. <a href="#">Fill this form to apply</a></p>
                 </div>
                 <div class="span6 pull-right">
                     <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
