--- a/cdi/templates/home/events/event_detail.html
+++ b/cdi/templates/home/events/event_detail.html
@@ -16,7 +16,7 @@
     <ul id="detail-ul" class="unstyled pull-left lead">
         <li><b>Type:</b> {{ event.event_type }}</li>
         <li><b>College:</b> {{ event.host }}</li>
-        <li><b>Established:</b> {{ event.start_date }} - {{ event.end_date }}</li>
+        <li><b>Dates:</b> {{ event.start_date }} - {{ event.end_date }}</li>
         <li><b>Participation:</b> {{ event.participation }}</li>
         <li><b>More Info:</b> {{ event.about }}</li>
         <li><a href="{{ event.website }}">Website/Facebook Page</a></li>
