--- a/cdi/templates/home.html
+++ b/cdi/templates/home.html
@@ -13,21 +13,21 @@
             <div class="item active">
                 <img src="{{ STATIC_URL }}img/slide1.jpg" alt="">
                 <div class="carousel-caption">
-                    <h4>First Thumbnail label</h4>
+                    <h4>Every Hot and Cold Event</h4>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 </div>
             </div>
             <div class="item">
                 <img src="{{ STATIC_URL }}img/slide2.jpg" alt="">
                 <div class="carousel-caption">
-                    <h4>Second Thumbnail label</h4>
+                    <h4>Connect with major college Clubs</h4>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 </div>
             </div>
             <div class="item">
                 <img src="{{ STATIC_URL }}img/slide3.jpg" alt="">
                 <div class="carousel-caption">
-                    <h4>Third Thumbnail label</h4>
+                    <h4>Get study material</h4>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 </div>
             </div>
@@ -49,6 +49,7 @@
                 <span class="icon-bar"></span>
             </button>
           <div class="nav-collapse-footer collapse">
+            <p class="navbar-text pull-right">by <a class="navbar-link" href="http://codesters.org/">Codesters</a></p>
                 <ul class="nav">
                     <li class="{% active request "^/about/" %}"><a href="{{ HOST }}/about/">Learn More</a></li>
                     <li class="{% active request "^/team/" %}"><a href="{{ HOST }}/team/">Team</a></li>
