dropbox url attached everywhere, working fine

--- a/cdi/templates/home/clubs/clubs_region.html
+++ b/cdi/templates/home/clubs/clubs_region.html
@@ -1,6 +1,6 @@
 {% extends "home/clubs/clubs_all.html" %}
 
-{% block title %}{{ cregion }} Clubs - CollegeDiveIn{% endblock %}
+{% block title %}Clubs - CollegeDiveIn{% endblock %}
 
 {% block page-heading%}
 {{ cregion }} Clubs
