--- a/cdi/templates/team.html
+++ b/cdi/templates/team.html
@@ -21,7 +21,7 @@
                 </ul>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ dropbox }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
@@ -39,7 +39,7 @@
                 </ul>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ STATIC_URL }}img/slide2.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ dropbox }}img/slide2.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
@@ -55,7 +55,7 @@
                 </ul>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ STATIC_URL }}img/slide3.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ dropbox }}img/slide3.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
@@ -70,7 +70,7 @@
                 </ul>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ dropbox }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
@@ -86,7 +86,7 @@
                 </ul>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ STATIC_URL }}img/slide2.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ dropbox }}img/slide2.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
