--- a/cdi/templates/home.html
+++ b/cdi/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block title %}CollegeDiveIn - spice up your college life{% endblock %}
 
-{% block extrajs %}<script src="{{ STATIC_URL }}js/cdi.js"></script> {% endblock %}
+{% block extrajs %}<script src="{{ dropbox }}js/cdi.js"></script> {% endblock %}
 
 {% block page-heading %}Welcome to CollegeDiveIn <small>spice up your life</small>{% endblock %}
 
@@ -11,21 +11,21 @@
     <div id="myCarousel" class="span8 offset2 carousel slide" data-interval="4000">
         <div class="carousel-inner">
             <div class="item active">
-                <img src="{{ STATIC_URL }}img/slide1.jpg" alt="">
+                <img src="{{ dropbox }}img/slide1.jpg" alt="">
                 <div class="carousel-caption">
                     <h4>Every Hot and Cold Event</h4>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 </div>
             </div>
             <div class="item">
-                <img src="{{ STATIC_URL }}img/slide2.jpg" alt="">
+                <img src="{{ dropbox }}img/slide2.jpg" alt="">
                 <div class="carousel-caption">
                     <h4>Connect with major college Clubs</h4>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                 </div>
             </div>
             <div class="item">
-                <img src="{{ STATIC_URL }}img/slide3.jpg" alt="">
+                <img src="{{ dropbox }}img/slide3.jpg" alt="">
                 <div class="carousel-caption">
                     <h4>Get study material</h4>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
