--- a/cdi/templates/home/colleges_list_base.html
+++ b/cdi/templates/home/colleges_list_base.html
@@ -19,11 +19,11 @@
                                     <div id="region" class="accordion-body collapse">
                                         <div class="accordion-inner">
                                             <ul class="nav nav-list">
-                                                <li class="{% active request "^/colleges/region/1/" %}"><a href="{{ HOST }}/colleges/">North</a></li>
-                                                <li class="{% active request "^/colleges/region/2/" %}"><a href="{{ HOST }}/colleges/">East</a></li>
-                                                <li class="{% active request "^/colleges/region/3/" %}"><a href="{{ HOST }}/colleges/">West</a></li>
-                                                <li class="{% active request "^/colleges/region/4/" %}"><a href="{{ HOST }}/colleges/">Central</a></li>
-                                                <li class="{% active request "^/colleges/region/5/" %}"><a href="{{ HOST }}/colleges/">South</a></li>
+                                                <li class="{% active request "^/colleges/region/1/" %}"><a href="{{ HOST }}/colleges/region/1/">North</a></li>
+                                                <li class="{% active request "^/colleges/region/2/" %}"><a href="{{ HOST }}/colleges/region/2/">East</a></li>
+                                                <li class="{% active request "^/colleges/region/3/" %}"><a href="{{ HOST }}/colleges/region/3/">West</a></li>
+                                                <li class="{% active request "^/colleges/region/4/" %}"><a href="{{ HOST }}/colleges/region/4/">Central</a></li>
+                                                <li class="{% active request "^/colleges/region/5/" %}"><a href="{{ HOST }}/colleges/region/5/">South</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -54,11 +54,11 @@
                     </div>
                     <hr />
                     <div class="row" id="social">
-                        <div class="span3"><a href="http://facebook.com/collegedivein"><img src="{{ STATIC_URL }}img/facebook.png" alt="CDI facebook page" /> </a>
-                        <a href="http://blog.collegedive.in"><img src="{{ STATIC_URL }}img/blogger.png" alt="CDI blog" /> </a>
-                        <a href="http://twitter.com/codestersgroup"><img src="{{ STATIC_URL }}img/twitter.png" alt="CDI twitter" /> </a>
-                        <a href="{{ HOST }}"><img src="{{ STATIC_URL }}img/googleplus.png" alt="CDI google plus" /> </a>
-                        <a href="mailto:cdi@codesters.org"> <img src="{{ STATIC_URL }}img/mail.png" alt="CDI mail" /></a></div>
+                        <div class="span3"><a href="http://facebook.com/collegedivein"><img src="{{ dropbox }}img/facebook.png" alt="CDI facebook page" /> </a>
+                        <a href="http://blog.collegedive.in"><img src="{{ dropbox }}img/blogger.png" alt="CDI blog" /> </a>
+                        <a href="http://twitter.com/codestersgroup"><img src="{{ dropbox }}img/twitter.png" alt="CDI twitter" /> </a>
+                        <a href="{{ HOST }}"><img src="{{ dropbox }}img/googleplus.png" alt="CDI google plus" /> </a>
+                        <a href="mailto:cdi@codesters.org"> <img src="{{ dropbox }}img/mail.png" alt="CDI mail" /></a></div>
                     </div>
                     <hr />
                 </div>
