--- a/cdi/templates/home/events/events_region.html
+++ b/cdi/templates/home/events/events_region.html
@@ -1,9 +1,7 @@
 {% extends "home/events/events_all.html" %}
 
-{% block title %}{{ cregion }} Events - CollegeDiveIn{% endblock %}
+{% block title %}Events - CollegeDiveIn{% endblock %}
 
-{% block page-heading%}
-{{ cregion }} Events
-{% endblock %}
+{% block page-heading%}Events{% endblock %}
 
 
