--- a/cdi/templates/about.html
+++ b/cdi/templates/about.html
@@ -21,7 +21,7 @@
                 </ul>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ dropbox }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
@@ -39,7 +39,7 @@
                 </ul>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ dropbox }}img/slide2.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ STATIC_URL }}img/slide2.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
@@ -56,7 +56,7 @@
                 </ul>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ dropbox }}img/slide3.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ STATIC_URL }}img/slide3.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
@@ -73,7 +73,7 @@
                 </ul>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ dropbox }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
@@ -91,7 +91,7 @@
                 <p>Sorry we do not supprt IE6, IE7, IE8, IE9. </p>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ dropbox }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
@@ -108,7 +108,7 @@
                 <p>We need college representatives from every college in India. <a href="#">Fill this form to apply</a></p>
                 </div>
                 <div class="span6 pull-right">
-                    <img src="{{ dropbox }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
+                    <img src="{{ STATIC_URL }}img/slide1.jpg" height=auto width=auto alt="CollegeDiveIn about" />
                 </div>
             </div>
         </section>
