--- a/cdi/templates/home/clubs/clubs_region.html
+++ b/cdi/templates/home/clubs/clubs_region.html
@@ -2,8 +2,7 @@
 
 {% block title %}Clubs - CollegeDiveIn{% endblock %}
 
-{% block page-heading%}
-{{ cregion }} Clubs
+{% block page-heading%}Clubs
 {% endblock %}
 
 
