--- a/cdi/templates/base.html
+++ b/cdi/templates/base.html
@@ -7,16 +7,16 @@
                 padding-top:40px;
             }
             header {
-                background: url({{ dropbox }}img/cdiheader.png);
+                background: url({{ STATIC_URL }}img/cdiheader.png);
                 opacity:0.8;
             }
             header small {
                 color: #000 !important;
             }
 </style>
-        <link rel="stylesheet" type="text/css" href="{{ dropbox }}css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="{{ dropbox }}css/bootstrap-responsive.css">
-        <link rel="stylesheet" type="text/css" href="{{ dropbox }}css/cdi.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap-responsive.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/cdi.css">
 
         {% block extrahead %} {% endblock %}
     </head>
@@ -62,11 +62,11 @@
     {% block footer %}{% endblock %}
     </footer>
 
-        <script src="{{ dropbox }}js/bootstrap.js"></script>
-        <script src="{{ dropbox }}js/jquery.js"></script>
-        <script src="{{ dropbox }}js/bootstrap-collapse.js"></script>
-        <script src="{{ dropbox }}js/bootstrap-transition.js"></script>
-        <script src="{{ dropbox }}js/bootstrap-carousel.js"></script>
+        <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
+        <script src="{{ STATIC_URL }}js/jquery.js"></script>
+        <script src="{{ STATIC_URL }}js/bootstrap-collapse.js"></script>
+        <script src="{{ STATIC_URL }}js/bootstrap-transition.js"></script>
+        <script src="{{ STATIC_URL }}js/bootstrap-carousel.js"></script>
 
         {% block extrajs %}{% endblock %}
     </body>
