--- a/cdi/templates/home/events_list_base.html
+++ b/cdi/templates/home/events_list_base.html
@@ -80,11 +80,11 @@
                     </div>
                     <hr />
                     <div class="row" id="social">
-                        <div class="span3"><a href="http://facebook.com/collegedivein"><img src="{{ dropbox }}img/facebook.png" alt="CDI facebook page" /> </a>
-                        <a href="http://blog.collegedive.in"><img src="{{ dropbox }}img/blogger.png" alt="CDI blog" /> </a>
-                        <a href="http://twitter.com/codestersgroup"><img src="{{ dropbox }}img/twitter.png" alt="CDI twitter" /> </a>
-                        <a href="{{ HOST }}"><img src="{{ dropbox }}img/googleplus.png" alt="CDI google plus" /> </a>
-                        <a href="mailto:cdi@codesters.org"> <img src="{{ dropbox }}img/mail.png" alt="CDI mail" /></a></div>
+                        <div class="span3"><a href="http://facebook.com/collegedivein"><img src="{{ STATIC_URL }}img/facebook.png" alt="CDI facebook page" /> </a>
+                        <a href="http://blog.collegedive.in"><img src="{{ STATIC_URL }}img/blogger.png" alt="CDI blog" /> </a>
+                        <a href="http://twitter.com/codestersgroup"><img src="{{ STATIC_URL }}img/twitter.png" alt="CDI twitter" /> </a>
+                        <a href="{{ HOST }}"><img src="{{ STATIC_URL }}img/googleplus.png" alt="CDI google plus" /> </a>
+                        <a href="mailto:cdi@codesters.org"> <img src="{{ STATIC_URL }}img/mail.png" alt="CDI mail" /></a></div>
                     </div>
                     <hr />
                     <!--
