google form added

--- a/cdi/templates/home.html
+++ b/cdi/templates/home.html
@@ -53,6 +53,8 @@
             <p class="navbar-text pull-right">by <a class="navbar-link" href="http://codesters.org/">Codesters</a></p>
             -->
                 <ul class="nav">
+                    <li class="{% active request "^/events/add/" %}"><a href="{{ HOST }}/events/add/">Add Event</a></li>
+                    <li class="{% active request "^/clubs/add/" %}"><a href="{{ HOST }}/clubs/add/">Add Club</a></li>
                     <li class="{% active request "^/about/" %}"><a href="{{ HOST }}/about/">Learn More</a></li>
                     <li class="{% active request "^/team/" %}"><a href="{{ HOST }}/team/">Team</a></li>
                     <li class="{% active request "^/contact/" %}"><a href="{{ HOST }}/contact/">Contact Us</a></li>
