--- a/cdi/templates/base.html
+++ b/cdi/templates/base.html
@@ -1,22 +1,30 @@
 <html>
     <head>
-        <title>{% block title %}{% endblock %}</title>
-
+    <title>{% block title %}{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="ColleDiveIn or CDI is here to spice up your college life. Get information about all the events, cultural fests, workshops, seminars.">
+    <meta name="author" content="Codesters">
+    
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 <style>
             body {
                 padding-top:40px;
             }
             header {
-                background: url({{ STATIC_URL }}img/cdiheader.png);
+                background: url({{ dropbox }}img/cdiheader.png);
                 opacity:0.8;
             }
             header small {
                 color: #000 !important;
             }
 </style>
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap-responsive.css">
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/cdi.css">
+        <link rel="stylesheet" type="text/css" href="{{ dropbox }}css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="{{ dropbox }}css/bootstrap-responsive.css">
+        <link rel="stylesheet" type="text/css" href="{{ dropbox }}css/cdi.css">
 
         {% block extrahead %} {% endblock %}
     </head>
