--- a/cdi/templates/base.html
+++ b/cdi/templates/base.html
@@ -15,7 +15,7 @@
                 padding-top:40px;
             }
             header {
-                background: url({{ STATIC_URL }}img/cdiheader.png);
+                background: #e1e1e1;
                 opacity:0.8;
             }
             header small {
